Update to MOEAFramework 4.0